--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,17 @@
   margin: 0px !important;
 }
 
-.buton{
+.buton {
+  background-color: #0b5ace !important;
+}
 
-  background-color: #0B5ACE !important;
+.img {
+  height: 25vh;
+}
 
+.bou {
+  border-radius: 0px !important;
+  border: 0px !important;
+  box-shadow: none;
+  width: 100% !important;
 }
