--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,30 @@
   margin: 0px !important;
 }
 
-.buton {
-  background-color: #0b5ace !important;
+.nav-item a {
+  color: #ffffff !important;
+  text-decoration: none;
 }
 
-.img {
-  height: 25vh;
+.logo{
+  color: #ffffff !important;
+  text-decoration: none !important;
+  margin-right: 50px !important; 
 }
 
-.bou {
-  border-radius: 0px !important;
-  border: 0px !important;
-  box-shadow: none;
-  width: 100% !important;
+.hero-block {
+  color: #fff;
+  padding-top: 200px;
+  padding-bottom: 200px;
+  background-image: url("https://images.fineartamerica.com/images-medium-large-5/best-art-choice-award-original-abstract-oil-painting-modern-trees-contemporary-home-deco-gallery-emma-lambert.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  backdrop-filter: blur(10px);
+  background-blend-mode: overlay;
+  background-color: rgba(0,0,0,0.5);
 }
+
+.hero-block h1 {
+
+}
+
