--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,19 @@
   margin: 0px !important;
 }
 
+.img {
+  height: 25vh;
+}
+
 .nav-item a {
   color: #ffffff !important;
   text-decoration: none;
 }
 
-.logo{
+.logo {
   color: #ffffff !important;
   text-decoration: none !important;
-  margin-right: 50px !important; 
+  margin-right: 50px !important;
 }
 
 .hero-block {
@@ -22,10 +26,8 @@
   background-size: cover;
   backdrop-filter: blur(10px);
   background-blend-mode: overlay;
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .hero-block h1 {
-
 }
-
